# TechChallenge04

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: README.md  patients.json
data/patients/: cohort.json
data/patients/PAC-001/: consulta.txt  pose_frames.csv  prescriptions.csv  vitals.csv
data/patients/PAC-002/: pose_frames.csv  prescriptions.csv  vitals.csv
data/patients/PAC-003/: consulta.txt  pose_frames.csv  prescriptions.csv  vitals.csv
data/patients/PAC-004/: consulta.txt  pose_frames.csv  prescriptions.csv  vitals.csv
data/patients/PAC-005/: consulta.txt  pose_frames.csv  prescriptions.csv  vitals.csv
data/patients/PAC-006/: pose_frames.csv  prescriptions.csv  vitals.csv
data/patients/PAC-007/: pose_frames.csv  prescriptions.csv  vitals.csv
data/patients/PAC-008/: pose_frames.csv  prescriptions.csv  vitals.csv
data/patients/PAC-009/: consulta.txt  pose_frames.csv  (+2 more)
data/samples/: pose_frames.csv  prescriptions.csv  vitals.csv
docs/: checklist_requisitos.md  deploy_azure.md  mapa_implementacao.md  relatorio_tecnico.md  roteiro_video.md
notebooks/: 01_exploracao_multimodal.ipynb
scripts/: extract_patient_pose.py  generate_patient_audio.ps1  generate_patient_cohort.py  generate_synthetic_data.py  run_demo.py
src/multimodal_monitor/: __init__.py  cli.py  cohort.py  config.py  demo.py  logging_config.py  schemas.py  synthetic.py
tests/: test_audio.py  test_cohort.py  test_fusion.py  test_hypotheses.py  test_intake.py  test_movement.py  test_orchestrator.py  test_prescriptions.py  test_vitals.py
(+61 files in other folders)
