[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-monitor"
version = "0.1.0"
description = "Monitoramento multimodal de pacientes hospitalares (áudio, vídeo, texto) com detecção de anomalias em tempo real — FIAP Tech Challenge Fase 4."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Grupo FIAP Pós-Tech IADT" }]
keywords = ["healthcare", "multimodal", "anomaly-detection", "azure", "computer-vision"]

dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.optional-dependencies]
vision = ["opencv-python>=4.9", "mediapipe>=0.10", "ultralytics>=8.1"]
audio = ["azure-cognitiveservices-speech>=1.36", "azure-ai-textanalytics>=5.3"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.3", "mypy>=1.8"]

[project.scripts]
mmonitor = "multimodal_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # FastAPI usa Depends() como default de argumento

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
